clusters/beryjuorg-prd/awx2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: awx-ingress
  namespace: awx2
spec:
  ingressClassName: nginx
  rules:
  - host: awx2.beryju.org
    http:
      paths:
      - backend:
          service:
            name: awxv2-service
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - awx2.beryju.org
    secretName: awx-acme
